# arXiv_scan

./: .gitignore  Development.ipynb  GPT-check.ipynb  README.md  Untitled.ipynb  convert_arxiv_to_text.sh  convert_pdf_to_text.sbatch.sh  process_chunk.sh  pyproject.toml
src/arxiv_scan/: scan_from_pdf.py
