[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv_scan"
version = "0.0.1"
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "Utilities for scanning through arXiv papers (downloaded) via LLMs and traditional tools."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["openai", "pypdf", "tiktoken"]

[project.optional-dependencies]
dev = ["pre-commit"]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/mmcdermott/arXiv_scan"
Issues = "https://github.com/mmcdermott/arXiv_scan/issues"
